#-------------------------------------------------------------------------------------------
# Copyright (c) 2023, SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyperc"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperc_diagnostics = { path = "../hyperc_diagnostics" }
hyperc_lexer = { path = "../hyperc_lexer" }
hyperc_parser = { path = "../hyperc_parser" }

color-eyre = "0.6"
unindent = "0.2"
