#-------------------------------------------------------------------------------------------
# Copyright (c) 2023, SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyperc_diagnostics"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperc_span = { path = "../hyperc_span" }
