#-------------------------------------------------------------------------------------------
# Copyright (c) 2023, SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyperc_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
