#-------------------------------------------------------------------------------------------
# Copyright (c) 2023, SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyperc_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperc_diagnostics = { path = "../hyperc_diagnostics" }
hyperc_span = { path = "../hyperc_span" }

unindent = "0.2"
